Update main section.

--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,13 @@ body {
 }
 
 .box {
-  width: 600px;
+  flex-grow: 1;
+  max-width: 600px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(8px);
   border-radius: 10px;
+  margin: 12px;
   padding: 12px;
   animation: show_box 1s;
 }
